{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 28,
  "lineage": "9d8b8589-1a0e-8559-1575-f87a23cec43c",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_elb",
      "name": "k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:839821061981:loadbalancer/kubernetes",
            "availability_zones": [
              "eu-central-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "desync_mitigation_mode": "defensive",
            "dns_name": "kubernetes-1586479190.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/healthz",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "kubernetes",
            "idle_timeout": 60,
            "instances": [
              "i-02759dbe2cdaa7c86",
              "i-069fe8443aa5e8000",
              "i-0c38e0d1d4a8c2e80"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "TCP",
                "lb_port": 6443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "kubernetes",
            "security_groups": [
              "sg-0a0b7f2a72c9e5507",
              "sg-0f39c900bb3ec8d1d"
            ],
            "source_security_group": "839821061981/k8s-api",
            "source_security_group_id": "sg-0f39c900bb3ec8d1d",
            "subnets": [
              "subnet-06fc80ae13bd27493"
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.cluster.aws_instance.controller",
            "module.iam.aws_iam_instance_profile.k8s",
            "module.iam.aws_iam_role.k8s",
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-069fe8443aa5e8000",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes",
            "id": "i-069fe8443aa5e8000",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035fba7560ad1d55c",
            "private_dns": "ip-10-43-0-20.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.20",
            "public_dns": "ec2-35-158-96-237.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.96.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090de5aa2b679585a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "controller-0",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "controller-0",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b7f2a72c9e5507",
              "sg-0f39c900bb3ec8d1d"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s",
            "module.iam.aws_iam_role.k8s",
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-02759dbe2cdaa7c86",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes",
            "id": "i-02759dbe2cdaa7c86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c7ffd747a345dda",
            "private_dns": "ip-10-43-0-21.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.21",
            "public_dns": "ec2-35-158-195-90.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.195.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc226c0809ca1373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "controller-1",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller1",
              "ansibleNodeType": "controller",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "controller-1",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller1",
              "ansibleNodeType": "controller",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b7f2a72c9e5507",
              "sg-0f39c900bb3ec8d1d"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s",
            "module.iam.aws_iam_role.k8s",
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-0c38e0d1d4a8c2e80",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes",
            "id": "i-0c38e0d1d4a8c2e80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5015b52a505812c",
            "private_dns": "ip-10-43-0-22.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.22",
            "public_dns": "ec2-3-76-212-180.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.76.212.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063857fca6f51a123",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "controller-2",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller2",
              "ansibleNodeType": "controller",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "controller-2",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller2",
              "ansibleNodeType": "controller",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b7f2a72c9e5507",
              "sg-0f39c900bb3ec8d1d"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.k8s",
            "module.iam.aws_iam_role.k8s",
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-00a0c3144d832eba1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a0c3144d832eba1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8832c6dd446e636",
            "private_dns": "ip-10-43-0-10.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.10",
            "public_dns": "ec2-3-66-171-50.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.171.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0351ff8ea1104fbe4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "etcd-0",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd0",
              "ansibleNodeType": "etcd",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "etcd-0",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd0",
              "ansibleNodeType": "etcd",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f39c900bb3ec8d1d"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-0861e4f68532ea122",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0861e4f68532ea122",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0802629c9a0514ecd",
            "private_dns": "ip-10-43-0-11.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.11",
            "public_dns": "ec2-3-70-253-141.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.253.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02446a250a2813829",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "etcd-1",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd1",
              "ansibleNodeType": "etcd",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "etcd-1",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd1",
              "ansibleNodeType": "etcd",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f39c900bb3ec8d1d"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-05084e6278ec25416",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05084e6278ec25416",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be280bd9bbe98d92",
            "private_dns": "ip-10-43-0-12.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.12",
            "public_dns": "ec2-52-58-199-49.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.58.199.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff83540e8ad3fcaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "etcd-2",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd2",
              "ansibleNodeType": "etcd",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "etcd-2",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd2",
              "ansibleNodeType": "etcd",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f39c900bb3ec8d1d"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-0cc5531e25bb91108",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc5531e25bb91108",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083e6d30254aeef9f",
            "private_dns": "ip-10-43-0-30.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.30",
            "public_dns": "ec2-18-192-107-253.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.107.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e4274f329041109",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "worker-0",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "worker-0",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b7f2a72c9e5507"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-05be2ec44ad603781",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05be2ec44ad603781",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00eef2313481f282b",
            "private_dns": "ip-10-43-0-31.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.31",
            "public_dns": "ec2-3-126-116-151.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.116.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049b1746ef83fd58e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "worker-1",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker1",
              "ansibleNodeType": "worker",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "worker-1",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker1",
              "ansibleNodeType": "worker",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b7f2a72c9e5507"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec7f9846da6b0f61",
            "arn": "arn:aws:ec2:eu-central-1:839821061981:instance/i-0a4215f3c8b2805ec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4215f3c8b2805ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kp-one",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c23c4dca48b9aa47",
            "private_dns": "ip-10-43-0-32.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.43.0.32",
            "public_dns": "ec2-52-59-197-25.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.197.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0814f65e4d86bf3a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06fc80ae13bd27493",
            "tags": {
              "Name": "worker-2",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker2",
              "ansibleNodeType": "worker",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "worker-2",
              "Owner": "Dvir Gross",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker2",
              "ansibleNodeType": "worker",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0b7f2a72c9e5507"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.k8s",
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:internet-gateway/igw-09a6d06d894592e1b",
            "id": "igw-09a6d06d894592e1b",
            "owner_id": "839821061981",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-01cb1a212b6f01e06"
          },
          "dependencies": [
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:route-table/rtb-04ab6f72c0a516228",
            "id": "rtb-04ab6f72c0a516228",
            "owner_id": "839821061981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a6d06d894592e1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cb1a212b6f01e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a43474950cdf7925",
            "route_table_id": "rtb-04ab6f72c0a516228",
            "subnet_id": "subnet-06fc80ae13bd27493"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.k8s",
            "module.network.aws_subnet.k8s",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-0a0b7f2a72c9e5507",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0b7f2a72c9e5507",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "147.235.205.46/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "147.235.205.46/32"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f39c900bb3ec8d1d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cb1a212b6f01e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.k8s_api",
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:security-group/sg-0f39c900bb3ec8d1d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f39c900bb3ec8d1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "147.235.205.46/32"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "k8s-api",
            "name_prefix": "",
            "owner_id": "839821061981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-api",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernetes-api",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cb1a212b6f01e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:subnet/subnet-06fc80ae13bd27493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.43.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fc80ae13bd27493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839821061981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "vpc_id": "vpc-01cb1a212b6f01e06"
          },
          "dependencies": [
            "module.network.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:839821061981:vpc/vpc-01cb1a212b6f01e06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.0.0/16",
            "default_network_acl_id": "acl-0ba766ba091115821",
            "default_route_table_id": "rtb-0cc4a9d686abe7439",
            "default_security_group_id": "sg-0c471c93e65118740",
            "dhcp_options_id": "dopt-0313a64657c4e833a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cb1a212b6f01e06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc4a9d686abe7439",
            "owner_id": "839821061981",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            },
            "tags_all": {
              "Name": "kubernetes",
              "Owner": "Dvir Gross",
              "bootcamp": "16",
              "expiration_date": "x.x.x"
            }
          }
        }
      ]
    }
  ]
}